update securityconfigi